@@ -10,9 +10,8 @@ sbindir = $(exec_prefix)sbin
 mandir = $(manprefix)/share/man
 oldmandir = $(manprefix)/man
 
-ifndef CC
-CC = gcc
-endif
+CC ?= gcc
+STRIP ?= strip
 
 CFLAGS := -O2 -W -Wall -Wbad-function-cast -Wcast-align -Wpointer-arith -Wcast-qual -Wshadow -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -fkeep-inline-functions -Wwrite-strings -Waggregate-return -Wnested-externs -Wtrigraphs $(CFLAGS)
 
@@ -29,7 +28,7 @@ all: hdparm
 
 hdparm: hdparm.h sgio.h $(OBJS)
 	$(CC) $(LDFLAGS) -o hdparm $(OBJS)
-	strip hdparm
+	$(STRIP) hdparm
 
 hdparm.o:	hdparm.h sgio.h
 
