@@ -1,4 +1,4 @@
-.TH HDPARM 8 "December 2008" "Version 9.4"
+.TH HDPARM 8 "December 2008" "Version 9.5"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
